[package]
name = "canvastaskhandler"
version = "0.1.0"
authors = ["jafioti <jafioti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.11.4", features=["json"]}
serde = {version="1.0.130", features=["derive"]}
serde_json = "1.0.66"
chrono = "0.4.19"
uuid = "0.8.2"
tokio = {version="1.11.0", features=["full"]}